# my_cmake_project_demos

./: CMakeLists.txt  ReadME.md
dir001-helloworld/: CMakeLists.txt  main.cpp
dir002-lib/: CMakeLists.txt
dir002-lib/lib/: CMakeLists.txt
dir002-lib/lib/add/include/: add.hpp
dir003-findpacke-gtest-lib/: CMakeLists.txt  main.cpp
dir003-findpacke-gtest-lib/lib/: CMakeLists.txt
dir003-findpacke-gtest-lib/lib/add/src/: add.cpp
dir003-findpacke-gtest-lib/test/: CMakeLists.txt
dir003-findpacke-gtest-lib/test/test-cases/: test_lib.cpp
